added catalog of exoplanets and code of plugin

--- a/plugins/Exoplanets/resources/Exoplanets.qrc
+++ b/plugins/Exoplanets/resources/Exoplanets.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/Exoplanets">
         <file>catalog.json</file>
+        <file>exoplanet.png</file>
     </qresource>
 </RCC>
