added GUI to Exoplanets plug-in

--- a/plugins/Exoplanets/resources/Exoplanets.qrc
+++ b/plugins/Exoplanets/resources/Exoplanets.qrc
@@ -1,6 +1,6 @@
 <RCC>
     <qresource prefix="/Exoplanets">
-        <file>catalog.json</file>
+        <file>exoplanets.json</file>
         <file>exoplanet.png</file>
     </qresource>
 </RCC>
