update GUI: fixed retranslation bug

--- a/plugins/Exoplanets/src/gui/exoplanetsDialog.ui
+++ b/plugins/Exoplanets/src/gui/exoplanetsDialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>530</width>
-    <height>497</height>
+    <width>528</width>
+    <height>495</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -151,7 +151,7 @@
           <item>
            <widget class="QCheckBox" name="internetUpdatesCheckbox">
             <property name="text">
-             <string>Update from Internet</string>
+             <string>Update from Internet sources</string>
             </property>
            </widget>
           </item>
