change update frequence

--- a/plugins/Pulsars/src/gui/pulsarsDialog.ui
+++ b/plugins/Pulsars/src/gui/pulsarsDialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>547</width>
-    <height>475</height>
+    <width>545</width>
+    <height>473</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -180,7 +180,7 @@
             <item row="1" column="0">
              <widget class="QLabel" name="updateFrequencyLabel">
               <property name="text">
-               <string>Update frequency (hours):</string>
+               <string>Update frequency (days):</string>
               </property>
              </widget>
             </item>
