added button for enable/disable show of exoplanets

--- a/plugins/Exoplanets/resources/Exoplanets.qrc
+++ b/plugins/Exoplanets/resources/Exoplanets.qrc
@@ -2,5 +2,7 @@
     <qresource prefix="/Exoplanets">
         <file>exoplanets.json</file>
         <file>exoplanet.png</file>
+        <file>btExoplanets-on.png</file>
+        <file>btExoplanets-off.png</file>
     </qresource>
 </RCC>
