tiny improvement of string for translation into Oculars plugin

--- a/plugins/Oculars/src/gui/ocularDialog.ui
+++ b/plugins/Oculars/src/gui/ocularDialog.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>509</width>
+    <width>507</width>
     <height>400</height>
    </rect>
   </property>
@@ -278,7 +278,7 @@
              <item>
               <widget class="QCheckBox" name="checkBoxDecimalDegrees">
                <property name="text">
-                <string>Use degrees and minutes for FOV</string>
+                <string>Use degrees and minutes for FOV of CCD</string>
                </property>
               </widget>
              </item>
