constructed shortcuts edit dialog with proper key grabbing

--- a/src/gui/shortcutsDialog.ui
+++ b/src/gui/shortcutsDialog.ui
@@ -106,12 +106,12 @@
     </widget>
    </item>
    <item>
-    <widget class="QFrame" name="frame">
+    <widget class="QFrame" name="mainFrame">
      <property name="frameShape">
       <enum>QFrame::StyledPanel</enum>
      </property>
      <property name="frameShadow">
-      <enum>QFrame::Plain</enum>
+      <enum>QFrame::Raised</enum>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_2">
       <property name="margin">
@@ -142,7 +142,7 @@
          <bool>false</bool>
         </property>
         <attribute name="headerDefaultSectionSize">
-         <number>250</number>
+         <number>200</number>
         </attribute>
         <attribute name="headerHighlightSections">
          <bool>false</bool>
@@ -162,7 +162,12 @@
         </column>
         <column>
          <property name="text">
-          <string>Shortcuts</string>
+          <string>Primary shortcut</string>
+         </property>
+        </column>
+        <column>
+         <property name="text">
+          <string>Alternative shortcut</string>
          </property>
         </column>
        </widget>
@@ -171,37 +176,73 @@
     </widget>
    </item>
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout_7">
-     <property name="topMargin">
-      <number>0</number>
+    <widget class="QFrame" name="editFrame">
+     <property name="frameShape">
+      <enum>QFrame::StyledPanel</enum>
      </property>
-     <property name="rightMargin">
-      <number>9</number>
-     </property>
-     <property name="bottomMargin">
-      <number>9</number>
-     </property>
-     <item>
-      <spacer name="horizontalSpacer_3">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
-      <widget class="QPushButton" name="resetAllPushButton">
-       <property name="text">
-        <string>Reset All</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
+     <layout class="QGridLayout" name="gridLayout">
+      <property name="leftMargin">
+       <number>9</number>
+      </property>
+      <property name="topMargin">
+       <number>1</number>
+      </property>
+      <property name="rightMargin">
+       <number>9</number>
+      </property>
+      <property name="bottomMargin">
+       <number>9</number>
+      </property>
+      <item row="0" column="0">
+       <widget class="QLabel" name="primaryLabel">
+        <property name="text">
+         <string>Edit Primary Shortcut</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="ShortcutLineEdit" name="primaryShortcutEdit">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="altLabel">
+        <property name="text">
+         <string>Edit Alternative Shortcut</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="ShortcutLineEdit" name="altShortcutEdit">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="2">
+       <widget class="QPushButton" name="applyButton">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="text">
+         <string>Apply</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="2">
+       <widget class="QPushButton" name="clearButton">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="text">
+         <string>Clear</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
    </item>
   </layout>
  </widget>
@@ -211,6 +252,11 @@
    <extends>QFrame</extends>
    <header location="global">Dialog.hpp</header>
    <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>ShortcutLineEdit</class>
+   <extends>QLineEdit</extends>
+   <header>ShortcutsDialog.hpp</header>
   </customwidget>
  </customwidgets>
  <resources/>
