better name for the "selected object info" tab

--- a/src/gui/configurationDialog.ui
+++ b/src/gui/configurationDialog.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>475</width>
+    <width>525</width>
     <height>465</height>
    </rect>
   </property>
@@ -1251,7 +1251,7 @@
         </item>
         <item>
          <property name="text">
-          <string>Selected</string>
+          <string>Information</string>
          </property>
          <property name="toolTip">
           <string>Selected object information</string>
