night mode look improvements

--- a/data/gui/guiRes.qrc
+++ b/data/gui/guiRes.qrc
@@ -20,6 +20,7 @@
         <file>tabicon-landscape-active.png</file>
         <file>tabicon-markings-active.png</file>
         <file>searchBoxBackground.png</file>
+        <file>nv_searchBoxBackground.png</file>
         <file>searchButtonImage.png</file>
         <file>tabicon-sky-active.png</file>
         <file>tabicon-starlore-active.png</file>
@@ -36,6 +37,8 @@
         <file>nv_checkbox-checked.png</file>
         <file>closeButton.png</file>
         <file>closeButton-hover.png</file>
+        <file>nv_closeButton.png</file>
+        <file>nv_closeButton-hover.png</file>
         <file>nv_checkbox-unchecked.png</file>
         <file>nv_radio-checked.png</file>
         <file>nv_radio-unchecked.png</file>
