night mode corrections from lp:~matthew-porpoisehead/stellarium/night branch

--- a/data/gui/guiRes.qrc
+++ b/data/gui/guiRes.qrc
@@ -6,6 +6,7 @@
         <file>btScriptRun-on.png</file>
         <file>btScriptRun-off.png</file>
         <file>folder.png</file>
+        <file>nv_folder.png</file>
         <file>spindown-pressed.png</file>
         <file>spinleft-pressed.png</file>
         <file>spinright-pressed.png</file>
@@ -104,6 +105,7 @@
         <file>btTimeNow-on.png</file>
         <file>btTimeRealtime-off.png</file>
         <file>btTimeRealtime-on.png</file>
+        <file>nv_btTimeRealtime-off.png</file>
         <file>btTimeRewind-off.png</file>
         <file>btTimeRewind-on.png</file>
         <file>btTimePause-on.png</file>
