night mode corrections for search tool

--- a/data/gui/guiRes.qrc
+++ b/data/gui/guiRes.qrc
@@ -23,6 +23,7 @@
         <file>searchBoxBackground.png</file>
         <file>nv_searchBoxBackground.png</file>
         <file>searchButtonImage.png</file>
+        <file>nv_searchButtonImage.png</file>
         <file>tabicon-sky-active.png</file>
         <file>tabicon-starlore-active.png</file>
         <file>btFlipHorizontal-off.png</file>
