--- a/data/gui/nightStyle.css
+++ b/data/gui/nightStyle.css
@@ -183,6 +183,7 @@ QPushButton#pushButtonGotoSearchSkyObject {
 	border-radius: 0px;
 	border-left: none;
 	padding: 2px;
+        image: url(:/graphicGui/nv_searchButtonImage.png);
 }
 
 QFrame#completionLabel {
